# rustworks

./: .gitignore  .gitmodules  CODEOWNERS  Cargo.toml  Embed.toml  LICENSE  Makefile.toml  README-FR.md  README.md  SETUP.md  flake.nix  flash.cfg  flash.sh  memory.x  openocd.cfg  openocd.gdb  rust-toolchain.toml  stm32f730v8t6.yaml
.cargo/: config.toml
.github/: dependabot.yml
board-support/: Cargo.toml
board-support/.cargo/: config.toml
board-support/src/: clocks.rs  display.rs  external_flash.rs  keypad.rs  lib.rs
bootloader/: Cargo.toml  Embed.toml  Makefile.toml  gdbinit.x  memory.x
bootloader/src/: dfu.rs  main.rs
os/: Cargo.toml  Makefile.toml  memory.x  stm32f730v8t6.yaml
os/src/: main.rs
src/: dfu.rs  display.rs  external_flash.rs  fsmc.rs  keypad.rs  led.rs  lib.rs  main.rs  mpu.rs  pwm.rs
