[workspace]
members = ["board-support", "bootloader", "os"]

[profile.dev.package."*"]
opt-level = "s"

[profile.dev]
opt-level = "z"
debug = 1
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[profile.release.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = true
panic = "abort"
opt-level = "z"
lto = true