[workspace]
members = ["board-support", "bootloader", "os"]
resolver = "2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
opt-level = 'z'
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
opt-level = 3
overflow-checks = true

# cargo build/run --release
# [profile.release]
# codegen-units = 1
# debug = 2
# debug-assertions = false
# lto = 'fat'
# opt-level = 3
# overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[patch.'https://github.com/nw-rs/board-support.git']
nw-board-support = { path = "./board-support" }

#[patch.'https://github.com/nw-rs/citrus-cas.git']
#citrus-cas = { path = "./citrus-cas" }

